# llm-playground

backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/llm/: connector.py
backend/src/prompts/: __init__.py  tranings.py
backend/tests/: __init__.py  test_main.py
